[package]
name = "axum-starknet-server"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.160", features = ["derive"] }

axum = { version = "0.6", features = ["json"] }

serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "master" }
url = "2.5.2"

clap = { version = "4.5.20", features = ["derive", "env"] }
# starknet-crypto = "0.7.0"
# starknet-types-core = "~0.1.4"
# starknet_api = "0.11.0"

dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"
